k8s-resources/registry/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: container-registry
  namespace: container-registry
  labels:
    app: container-registry
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: container-registry
  template:
    metadata:
      labels:
        app: container-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
            # name must match the volume name below
            - name: registry-storage
              mountPath: "/var/lib/registry"
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: registry-storage
      securityContext:
        fsGroup: 1000
