k8s-resources/registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: container-registry
  namespace: container-registry
spec:
  selector:
    app: container-registry
  ports:
  - name: http
    targetPort: 5000
    port: 80
  - name: https
    targetPort: 5000
    port: 443
  # - name: registry
  #   targetPort: 5000
  #   port: 5000
